<resources>
    <string name="app_name">Conversor</string>
    <string name="conversor">Conversor</string>
    <string name="de">De:</string>
    <string name="a">"A: "</string>
    <string name="resultado">"Resultado:"</string>
    <string name="valor">Valor:</string>
    <string name="conversion_botton">Covertir</string>
    <string name="valor_deseado">Digite el valor deseado a convertir</string>


    <string-array name="argent_spinner">
        <item> Escoge el tipo de moneda</item>
        <item> Peso</item>
        <item> Euro</item>
        <item> Libra</item>
    </string-array>

    <string-array name="argent2_spinner">
        <item> Escoge el tipo de moneda</item>
        <item>Peso</item>
        <item>Euro</item>
        <item>Libra</item>
    </string-array>


</resources>