<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/conversor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/conversor"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/de_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/de"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversor_textview" />

    <Spinner
        android:id="@+id/argent_spinner"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:entries="@array/argent_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/de_textview"
        app:layout_constraintStart_toEndOf="@+id/de_textview" />

    <TextView
        android:id="@+id/a_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/a"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/de_textview" />

    <Spinner
        android:id="@+id/argent2_spinner"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/argent2_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/a_textView"
        app:layout_constraintStart_toEndOf="@+id/a_textView"
        app:layout_constraintTop_toBottomOf="@+id/argent_spinner" />

    <TextView
        android:id="@+id/resultado_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor_textview" />

    <TextView
        android:id="@+id/valor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/valor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_textView" />

    <TextView
        android:id="@+id/resultadoreal_textview"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/resultado_textview"
        app:layout_constraintStart_toEndOf="@+id/resultado_textview" />

    <Button
        android:id="@+id/conversion_botton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="#000000"
        android:background="@color/colorPrimary"
        android:text="@string/conversion_botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoreal_textview" />

    <EditText
        android:id="@+id/rfinal_edit_text"
        android:layout_width="224dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/valor_deseado"
        android:inputType="textPersonName"
        android:scrollbarSize="16dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/valor_textview"
        app:layout_constraintStart_toEndOf="@+id/valor_textview"
        app:layout_constraintTop_toBottomOf="@+id/argent2_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>